2025-06-05  Zhengyi Fu  <i@fuzy.me>

	Do not force `compilation-mode` to use pipes

	* init.el (+process-use-pipe): Remove function.

2025-06-05  Zhengyi Fu  <i@fuzy.me>

	* rnc-schemas/busconfig.rnc: New file.

2025-05-20  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/consult-ugrep.el (consult--ugrep-make-builder):
	Correctly handle -j flag.  -S is not short for --smart-case.

2025-05-20  Zhengyi Fu  <i@fuzy.me>

	Add forge

	* packages.el:
	* init.el:

2025-05-20  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/tui/tui.el: Fix warnings.

2025-05-20  Zhengyi Fu  <i@fuzy.me>

	Remove `popper'

	* packages.el:
	* init.el:

2025-05-17  Zhengyi Fu  <i@fuzy.me>

	* init.el (file-map): Replace `recentf-open' with
	`consult-recent-file'.

2025-05-17  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/eshell-extras.el (eshell/rg): Do not allow use of
	`occur'.

2025-05-17  Zhengyi Fu  <i@fuzy.me>

	* init.el (meow-setup): Do not set `meow-mode-state-list'.

2025-05-16  Zhengyi Fu  <i@fuzy.me>

	* init.el <eshell>: Update `eshell-visual-commands' and
	`eshell-visual-subcommands'.

2025-05-15  Zhengyi Fu  <i@fuzy.me>

	* init.el <eglot>: Bind C-x x / to `eglot-format' in `eglot-mode-map'.

2025-05-14  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/tui/tui.el (tui--kill-callback): Delay 4 seconds and
	send SIGKILL to the process.

2025-05-14  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/consult-kill.el (consult-kill): Delay 4 seconds and
	send SIGKILL to the process.

2025-05-14  Zhengyi Fu  <i@fuzy.me>

	Add `bufferlo'

	* packages.el:
	* init.el: Add bufferlo configuration.
	(+autoload-recursively): New function.
	(+bufferlo-consult--source-local-buffers)
	(+bufferlo-consult--source-other-buffers)
	(+bufferlo-consult--source-all-buffers): New variables.  Added to
	`consult-buffer-sources'.
	(+bufferlo-prefix-map): New keymap.  Bind to C-c z.


2025-05-14  Zhengyi Fu  <i@fuzy.me>

	Remove activities.el

	* packages.el:
	* init.el: Remove configuration for activities.el.

2025-05-14  Zhengyi Fu  <i@fuzy.me>
